# witness

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  claims.yaml  codecov.yml  deny.toml  rivet.yaml  rust-toolchain.toml
.cargo/: mutants.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  harness-question.md  instrument-failure.md  mcdc-surprise.md
.github/actions/compliance/: README.md  action.yml  suite-index.py  trace-matrix.py
.github/actions/witness/: README.md  action.yml
.github/workflows/: ci.yml  claim-check.yml  release.yml  verification-gate.yml  witness-delta.yml
.github/workflows/scripts/: verdict_delta.py
.rivet/: .rivet-version
.rivet/agents/: rivet-rule.md
.rivet/context/: domain-glossary.md  review-roles.yaml  risk-tolerance.yaml
artifacts/: ai-sessions.yaml  design-decisions.yaml  features.yaml  requirements.yaml  verification.yaml
crates/witness/: Cargo.toml  build.rs
crates/witness-component/: Cargo.toml  target
crates/witness-component/src/: lib.rs
crates/witness-component/wit/: world.wit
crates/witness-core/: Cargo.toml
crates/witness-core/src/: attest.rs  cross_check.rs  decisions.rs  demangle.rs  diff.rs  error.rs  instrument.rs  lcov.rs  lib.rs  mcdc_report.rs  object_disposition.rs  predicate.rs  report.rs  rivet_evidence.rs  run_record.rs  sourcemap.rs
crates/witness-core/tests/: object_disposition_e2e.rs
crates/witness-core/tests/fixtures/: prov396.synth-provenance-v1.json  prov396.wasm  prov396.wat
crates/witness-mcdc-checker/: Cargo.toml
crates/witness-mcdc-checker/src/: lib.rs
crates/witness-mcdc-checker/tests/: properties.rs
crates/witness-viz/: Cargo.toml  build.rs  target
crates/witness-viz/assets/: htmx.min.js  styles.css
crates/witness-viz/src/: api.rs  data.rs  export.rs  js.rs  layout.rs  lib.rs  main.rs  mcp.rs  pages_index.rs  prcomment.rs  render.rs  state.rs  styles.rs  views.rs
crates/witness-viz/tests/: export.rs  integration.rs  mcp.rs  pages_index.rs  prcomment.rs  provenance.rs
crates/witness/src/: lib.rs  main.rs  run.rs
crates/witness/tests/: integration_e2e.rs  properties.rs
crates/witness/tests/fixtures/: .gitignore
crates/witness/tests/fixtures/sample-rust-crate/: Cargo.toml  build.sh
crates/witness/tests/fixtures/sample-rust-crate/src/: lib.rs
docs/: concepts.md  cross-language.md  getting-started.md  quickstart.md  roadmap.md
docs/paper/: v0.2-mcdc-wasm.md
docs/proposals/: v0.10.0.md
docs/research/: dw-at-ranges-test-cases.md  mcdc-bytecode-research.md  overdo-alignment.md  rivet-evidence-consumer.md  rivet-template-mapping.md  sigil-predicate-format.md  source-map-ingestion.md  v04-blog-principles.md  v04-ci-ports.md  v04-compiler-qualification-reduction.md  v05-component-witness.md  v05-lcov-format.md  v05-loom-meld-upstream.md  v06-instrumentation-primitive.md  v07-scaling-roadmap.md  v08-visualisation-roadmap.md  v09-soa-and-agent-ux.md  walrus-legacy-eh-issue-draft.md
docs/schemas/: README.md  witness-coverage-v1.json  witness-mcdc-v1.json  witness-mcdc-v2.json  witness-mcdc-v3.json  witness-rivet-evidence-v1.json  witness-trace-matrix-v1.json
examples/languages/c/leap-year/: .gitignore  README.md  build.sh  leap.c
examples/languages/c/leap-year-wasi/: README.md  build.sh  leap.c
examples/languages/cpp/eh-table/: README.md  build.sh  parser.cpp
examples/languages/cpp/leap-year/: .gitignore  README.md  build.sh  leap.cpp
examples/languages/cpp/stl-shortcircuit/: .gitignore  README.md  build.sh  check.cpp
examples/languages/cpp/virtual-dispatch/: README.md  build.sh  shapes.cpp
examples/languages/go/leap-year/: README.md  build.sh  leap.go
examples/languages/kotlin/leap-year/: .gitignore  README.md  build.gradle.kts  build.sh  settings.gradle.kts
examples/languages/kotlin/leap-year/src/wasmJsMain/kotlin/: leap.kt
examples/languages/swift/leap-year/: .gitignore  Package.swift  README.md  build.sh  leap.swift
examples/languages/zig/leap-year/: .gitignore  README.md  build.sh  leap.zig
schemas/: witness-verification.yaml
src/: decisions.rs  diff.rs  error.rs  instrument.rs  lib.rs  main.rs  predicate.rs  report.rs  rivet_evidence.rs  run.rs
tests/: integration_e2e.rs  properties.rs
tests/fixtures/sample-rust-crate/: README.md
tests/playwright/: README.md  api.spec.ts  dashboard.spec.ts  decision.spec.ts  gap.spec.ts  helpers.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  verdict.spec.ts
tools/: claim-check.py  post_verification_comment.py  run_verification.py
verdicts/: README.md  build-all.sh  run-suite.sh
verdicts/base64_decode/: Cargo.toml  build.sh
verdicts/base64_decode/src/: lib.rs
verdicts/httparse/: Cargo.toml  build.sh
verdicts/httparse/src/: lib.rs
verdicts/json_lite/: Cargo.toml  TRUTH-TABLE.md  V-MODEL.md  build.sh
verdicts/json_lite/src/: lib.rs
verdicts/leap_year/: Cargo.toml  TRUTH-TABLE.md  V-MODEL.md  build.sh
verdicts/leap_year/src/: lib.rs
verdicts/mixed_or_and/: Cargo.toml  TRUTH-TABLE.md  V-MODEL.md  build.sh
verdicts/mixed_or_and/src/: lib.rs
verdicts/multi_context/: Cargo.toml  TRUTH-TABLE.md  build.sh
verdicts/multi_context/src/: lib.rs
verdicts/nom_numbers/: Cargo.toml  TRUTH-TABLE.md  V-MODEL.md  build.sh
verdicts/nom_numbers/src/: lib.rs
verdicts/parser_dispatch/: Cargo.toml  TRUTH-TABLE.md  V-MODEL.md  build.sh
verdicts/parser_dispatch/src/: lib.rs
verdicts/range_overlap/: Cargo.toml  TRUTH-TABLE.md  V-MODEL.md  build.sh
verdicts/range_overlap/src/: lib.rs
verdicts/safety_envelope/: Cargo.toml  TRUTH-TABLE.md  V-MODEL.md  build.sh
verdicts/safety_envelope/src/: lib.rs
verdicts/state_guard/: Cargo.toml  TRUTH-TABLE.md  V-MODEL.md  build.sh
verdicts/state_guard/src/: lib.rs
verdicts/state_machine/: Cargo.toml  TRUTH-TABLE.md  V-MODEL.md  build.sh
verdicts/state_machine/src/: lib.rs
verdicts/triangle/: Cargo.toml  TRUTH-TABLE.md  V-MODEL.md  build.sh
verdicts/triangle/src/: lib.rs
