[package]
name = "witness"
version = "0.2.0"
edition = "2024"
rust-version = "1.91"
description = "MC/DC-style branch coverage for WebAssembly components"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pulseengine/witness"
homepage = "https://pulseengine.eu"
readme = "README.md"
keywords = ["wasm", "webassembly", "coverage", "mcdc", "safety-critical"]
categories = ["development-tools::testing", "wasm"]
authors = ["Ralf Anton Beier"]

# SCRC (Safety-Critical Rust Consortium) Phase 1 + Phase 2 clippy lints.
# Mirrors the rivet workspace policy — see ../rivet/Cargo.toml. `priority = -1`
# keeps individual `#[allow(clippy::xxx)]` at call sites precedent over the
# crate-wide default.
[lints.rust]
unexpected_cfgs = { level = "warn" }

[lints.clippy]
# Phase 1 — restriction family (DD-059).
unwrap_used = { level = "warn", priority = -1 }
expect_used = { level = "warn", priority = -1 }
indexing_slicing = { level = "warn", priority = -1 }
arithmetic_side_effects = { level = "warn", priority = -1 }
as_conversions = { level = "warn", priority = -1 }
cast_possible_truncation = { level = "warn", priority = -1 }
cast_sign_loss = { level = "warn", priority = -1 }
wildcard_enum_match_arm = { level = "warn", priority = -1 }
match_wildcard_for_single_variants = { level = "warn", priority = -1 }
panic = { level = "warn", priority = -1 }
todo = { level = "warn", priority = -1 }
unimplemented = { level = "warn", priority = -1 }
dbg_macro = { level = "warn", priority = -1 }
print_stdout = { level = "warn", priority = -1 }
print_stderr = { level = "warn", priority = -1 }
# Phase 2 — unsafe-block hygiene & memory-safety (DD-063).
undocumented_unsafe_blocks = { level = "warn", priority = -1 }
multiple_unsafe_ops_per_block = { level = "warn", priority = -1 }
mem_forget = { level = "warn", priority = -1 }
mem_replace_with_uninit = { level = "warn", priority = -1 }
transmute_undefined_repr = { level = "warn", priority = -1 }
uninit_assumed_init = { level = "warn", priority = -1 }
rc_mutex = { level = "warn", priority = -1 }
mutex_atomic = { level = "warn", priority = -1 }
same_name_method = { level = "warn", priority = -1 }
lossy_float_literal = { level = "warn", priority = -1 }
empty_drop = { level = "warn", priority = -1 }
exit = { level = "warn", priority = -1 }

[dependencies]
# Wasm AST manipulation — instruments br_if/br_table/if with counters.
walrus = "0.24"

# Built-in Wasm runtime for `witness run`. Harness-cooperation mode is v0.2.
wasmtime = "42"
wasmtime-wasi = "42"

# CLI.
clap = { version = "4", features = ["derive"] }

# Error handling.
anyhow = "1"
thiserror = "2"

# Serialization for coverage reports + future rivet predicate emission.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Temp directories for the subprocess-harness snapshot file (run.rs).
tempfile = "3"

[dev-dependencies]
# Parse inline Wasm text for tests.
wat = "1"
# Golden-output test assertions.
insta = { version = "1", features = ["yaml"] }

[[bin]]
name = "witness"
path = "src/main.rs"

[lib]
name = "witness"
path = "src/lib.rs"

[profile.release]
# Small binary, no debug symbols in release.
strip = true
lto = "thin"
codegen-units = 1
