[workspace]
resolver = "2"
members = [
    "crates/witness-core",
    "crates/witness",
]

[workspace.package]
version = "0.6.5"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pulseengine/witness"
homepage = "https://pulseengine.eu"
authors = ["Ralf Anton Beier"]

# SCRC (Safety-Critical Rust Consortium) Phase 1 + Phase 2 clippy lints.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn" }

[workspace.lints.clippy]
unwrap_used = { level = "warn", priority = -1 }
expect_used = { level = "warn", priority = -1 }
indexing_slicing = { level = "warn", priority = -1 }
arithmetic_side_effects = { level = "warn", priority = -1 }
as_conversions = { level = "warn", priority = -1 }
cast_possible_truncation = { level = "warn", priority = -1 }
cast_sign_loss = { level = "warn", priority = -1 }
wildcard_enum_match_arm = { level = "warn", priority = -1 }
match_wildcard_for_single_variants = { level = "warn", priority = -1 }
panic = { level = "warn", priority = -1 }
todo = { level = "warn", priority = -1 }
unimplemented = { level = "warn", priority = -1 }
dbg_macro = { level = "warn", priority = -1 }
print_stdout = { level = "warn", priority = -1 }
print_stderr = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = { level = "warn", priority = -1 }
multiple_unsafe_ops_per_block = { level = "warn", priority = -1 }
mem_forget = { level = "warn", priority = -1 }
mem_replace_with_uninit = { level = "warn", priority = -1 }
transmute_undefined_repr = { level = "warn", priority = -1 }
uninit_assumed_init = { level = "warn", priority = -1 }
rc_mutex = { level = "warn", priority = -1 }
mutex_atomic = { level = "warn", priority = -1 }
same_name_method = { level = "warn", priority = -1 }
lossy_float_literal = { level = "warn", priority = -1 }
empty_drop = { level = "warn", priority = -1 }
exit = { level = "warn", priority = -1 }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
gimli = { version = "0.31", default-features = false, features = ["read", "std"] }
wasmparser = "0.240"
walrus = "0.24"
wasmtime = "42"
wasmtime-wasi = "42"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
wat = "1"
insta = { version = "1", features = ["yaml"] }
proptest = "1"
# Sigil's attestation primitives — DSSE envelope, in-toto Statement
# wrapper, Ed25519 signing. Pure Rust, wasm-compatible (the `signing`
# feature only adds ed25519-compact + ct-codecs).
wsc-attestation = { version = "0.8", features = ["signing"] }
# Direct dep so witness-core can construct keypairs in tests and
# verify envelopes alongside wsc-attestation's signing API.
ed25519-compact = "2.1"
base64 = "0.22"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
