[package]
name = "witness-core"
description = "Pure-data algorithms for witness — instrument schema, decisions, diff, predicate, report, rivet evidence, LCOV emission. No wasmtime/walrus dependency; targets wasm32-wasip2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["wasm", "webassembly", "coverage", "mcdc", "safety-critical"]
categories = ["development-tools::testing", "wasm"]

[lints]
workspace = true

# Both rlib (so the witness binary crate can link witness-core normally)
# and cdylib (so `cargo build --target wasm32-wasip2` produces a
# witness_core.wasm release asset).
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
walrus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
gimli = { workspace = true }
wasmparser = { workspace = true }
wsc-attestation = { workspace = true }
ed25519-compact = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
wat = { workspace = true }
