[package]
# v0.27.0 — renamed from `witness-viz` (DEC-034). `[lib] name`
# (witness_viz) and `[[bin]] name` (witness-viz) below are unchanged,
# so neither code nor the installed command moves.
name = "witness-mcdc-viz"
version = "0.30.0"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pulseengine/witness"
description = "HTMX-powered MC/DC truth-table visualiser for witness compliance bundles"
build = "build.rs"

# Standalone workspace — see crates/witness-component/Cargo.toml for the
# same pattern. Reason: native binary stays decoupled from workspace
# build planning, lets us iterate on Axum/Tokio versions independently.
[workspace]

[lib]
name = "witness_viz"
path = "src/lib.rs"

[[bin]]
name = "witness-viz"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
# v0.24 — syntax highlighting for the full-file source pages emitted
# by `witness-viz export`. We disable the `regex-fancy` features and
# rely on `regex-onig` (the default) since the bundled syntaxes are
# already onig-based. Adds ~5 MB embedded syntax/theme assets to the
# binary but enables Rust, C, C++, Swift, Kotlin, Zig, Go, etc. with
# zero runtime config. See DEC-031.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
# v0.27 — demangle Rust symbol names (legacy `_ZN…` + v0 `_R…`) for
# the per-condition provenance display. Tiny, zero transitive deps.
rustc-demangle = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"

[lints.clippy]
unwrap_used = { level = "warn", priority = -1 }
expect_used = { level = "warn", priority = -1 }
panic = { level = "warn", priority = -1 }
print_stdout = { level = "warn", priority = -1 }

[profile.release]
strip = true
lto = "thin"
