[package]
# v0.27.0 — renamed from `witness` to sidestep the crates.io conflict
# with an unrelated prior registration (flammafex/Sibyl owns `witness`
# / `witness-core`). The `witness-mcdc-*` namespace is free and partly
# ours already (witness-mcdc-checker). The `[lib] name` and `[[bin]]
# name` below are pinned to their old values, so neither `use witness`
# nor the installed `witness` command changes — only the crates.io
# package identity. See DEC-034.
name = "witness-mcdc"
description = "MC/DC-style branch coverage CLI for WebAssembly components."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["wasm", "webassembly", "coverage", "mcdc", "safety-critical"]
categories = ["development-tools::testing", "wasm"]
readme = "../../README.md"

[lints]
workspace = true

# Pin the lib name to the old package name so `use witness::run`
# (main.rs) and `use witness_core` consumers are unaffected by the
# package rename (DEC-034).
[lib]
name = "witness"
path = "src/lib.rs"

[[bin]]
name = "witness"
path = "src/main.rs"

# `cargo witness` subcommand alias — cargo invokes this binary when
# a user runs `cargo witness ...`. The shim strips the leading
# "witness" pseudo-arg and re-execs the sibling `witness` binary.
[[bin]]
name = "cargo-witness"
path = "src/bin/cargo-witness.rs"

[dependencies]
witness-mcdc-core = { path = "../witness-core", version = "0.38.0" }
walrus = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
wat = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
