[package]
name = "verdict-mixed-or-and"
version = "0.0.0"
edition = "2024"
publish = false
description = "Witness verdict: 4-condition nested operators (a||b) && (c||d)."
license = "Apache-2.0 OR MIT"

[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
strip = false
codegen-units = 1
lto = false
panic = "abort"
opt-level = 1
