[package]
name = "verdict-nom-numbers"
version = "0.0.0"
edition = "2024"
publish = false
description = "Witness verdict: nom-driven decimal-integer parser. Real-application fixture exercising nom's combinator branches under no_std."
license = "Apache-2.0 OR MIT"

# Standalone — not part of the witness workspace.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
nom = { version = "7", default-features = false }

[profile.release]
debug = true
strip = false
codegen-units = 1
lto = false
panic = "abort"
opt-level = 1
