[package]
name = "verdict-range-overlap"
version = "0.0.0"
edition = "2024"
publish = false
description = "Witness verdict: minimal 2-condition AND. a.start <= b.end && b.start <= a.end."
license = "Apache-2.0 OR MIT"

[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
strip = false
codegen-units = 1
lto = false
panic = "abort"
opt-level = 1
