[package]
name = "verdict-state-guard"
version = "0.0.0"
edition = "2024"
publish = false
description = "Witness verdict: 4-condition AND chain — TLS-handshake-style state guard."
license = "Apache-2.0 OR MIT"

[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
strip = false
codegen-units = 1
lto = false
panic = "abort"
opt-level = 1
