[package]
name = "verdict-state-machine"
version = "0.0.0"
edition = "2024"
publish = false
description = "Witness verdict: TLS 1.3 handshake state machine. Compound transition guards over (state, next-state, context-flags)."
license = "Apache-2.0 OR MIT"

# Standalone — not part of the witness workspace.
[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
strip = false
codegen-units = 1
lto = false
panic = "abort"
opt-level = 1
