[package]
name = "verdict-triangle"
version = "0.0.0"
edition = "2024"
publish = false
description = "Witness verdict: Myers-paper triangle classifier 'not a triangle' check. a+b<=c || a+c<=b || b+c<=a."
license = "Apache-2.0 OR MIT"

[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
strip = false
codegen-units = 1
lto = false
panic = "abort"
opt-level = 1
